[gd_scene load_steps=19 format=2]

[ext_resource path="res://src/Actors/boss.png" type="Texture" id=1]
[ext_resource path="res://src/Actors/Boss.gd" type="Script" id=2]
[ext_resource path="res://src/Actors/boss_special.png" type="Texture" id=3]

[sub_resource type="Animation" id=1]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=3]
resource_name = "attack"
length = 1.6
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1, 1.1, 1.2, 1.3, 1.4, 1.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 11, 12, 13, 14, 15, 16, 17, 18, 19, 20, 21, 20, 19, 18, 17, 16 ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.4, 0.7, 1.3, 1.5, 1.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"values": [ {
"args": [  ],
"method": "reset_idle_count"
}, {
"args": [  ],
"method": "melee_hit"
}, {
"args": [  ],
"method": "melee_end_hit"
}, {
"args": [  ],
"method": "enable_movement"
}, {
"args": [  ],
"method": "start_idle"
} ]
}

[sub_resource type="Animation" id=15]
resource_name = "death"
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.4, 1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 1 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "die"
} ]
}

[sub_resource type="Animation" id=2]
resource_name = "idle"
length = 1.1
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6, 0.8, 1 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5 ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 1.1 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "add_idle_count"
} ]
}

[sub_resource type="Animation" id=4]
resource_name = "special"
length = 1.2
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 22, 23, 24, 25, 26, 27, 28, 29, 30, 31, 32 ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.4, 0.9, 1.1, 1.2 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"values": [ {
"args": [  ],
"method": "reset_idle_count"
}, {
"args": [  ],
"method": "start_special"
}, {
"args": [  ],
"method": "enable_movement"
}, {
"args": [  ],
"method": "start_idle"
} ]
}

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 25.5, 50.5 )

[sub_resource type="RectangleShape2D" id=6]
extents = Vector2( 25.5, 70.5 )

[sub_resource type="RectangleShape2D" id=7]
extents = Vector2( 59.125, 74.25 )

[sub_resource type="RectangleShape2D" id=8]
extents = Vector2( 68.5, 78.75 )

[sub_resource type="RectangleShape2D" id=9]
extents = Vector2( 45, 33.742 )

[sub_resource type="Animation" id=10]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("special_mid:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0 ]
}

[sub_resource type="Animation" id=11]
resource_name = "special_far"
length = 1.2
tracks/0/type = "value"
tracks/0/path = NodePath("special_mid:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10 ]
}
tracks/1/type = "method"
tracks/1/path = NodePath("..")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.8, 1.1, 1.2 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"values": [ {
"args": [  ],
"method": "special_mid_switch"
}, {
"args": [  ],
"method": "hit"
}, {
"args": [  ],
"method": "end_hit"
}, {
"args": [  ],
"method": "special_mid_switch"
} ]
}

[sub_resource type="Animation" id=12]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("special_far:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0 ]
}

[sub_resource type="Animation" id=13]
resource_name = "special_far"
length = 1.2
tracks/0/type = "value"
tracks/0/path = NodePath("special_far:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10 ]
}
tracks/1/type = "method"
tracks/1/path = NodePath("..")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.8, 1.1, 1.2 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"values": [ {
"args": [  ],
"method": "special_far_switch"
}, {
"args": [  ],
"method": "far_hit"
}, {
"args": [  ],
"method": "far_end_hit"
}, {
"args": [  ],
"method": "special_far_switch"
} ]
}

[sub_resource type="RectangleShape2D" id=14]
extents = Vector2( 22, 55 )

[node name="Boss" type="KinematicBody2D"]
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )
hframes = 11
vframes = 3

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/RESET = SubResource( 1 )
anims/attack = SubResource( 3 )
anims/death = SubResource( 15 )
anims/idle = SubResource( 2 )
anims/special = SubResource( 4 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -2.5, 10.5 )
shape = SubResource( 5 )

[node name="Timer" type="Timer" parent="."]

[node name="PlayerDetector_close" type="Area2D" parent="."]
collision_layer = 0

[node name="close" type="CollisionShape2D" parent="PlayerDetector_close"]
position = Vector2( -57, 12.5 )
shape = SubResource( 6 )

[node name="PlayerDetector_mid" type="Area2D" parent="."]
collision_layer = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayerDetector_mid"]
position = Vector2( -144.875, 11.75 )
shape = SubResource( 7 )

[node name="PlayerDetector_far" type="Area2D" parent="."]
collision_layer = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayerDetector_far"]
position = Vector2( -276.5, 10.25 )
shape = SubResource( 8 )

[node name="Hitbox_special" type="Area2D" parent="."]
collision_layer = 0
monitoring = false
monitorable = false

[node name="special_mid" type="Sprite" parent="Hitbox_special"]
visible = false
position = Vector2( -142, 43 )
texture = ExtResource( 3 )
hframes = 11

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hitbox_special"]
position = Vector2( -140, 76 )
rotation = 0.441568
shape = SubResource( 9 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="Hitbox_special"]
anims/RESET = SubResource( 10 )
anims/special_mid = SubResource( 11 )

[node name="Hitbox_special_far" type="Area2D" parent="."]
position = Vector2( -123, 0 )
collision_layer = 0
monitoring = false
monitorable = false

[node name="special_far" type="Sprite" parent="Hitbox_special_far"]
visible = false
position = Vector2( -142, 43 )
texture = ExtResource( 3 )
hframes = 11

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hitbox_special_far"]
position = Vector2( -140, 76 )
rotation = 0.441568
shape = SubResource( 9 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="Hitbox_special_far"]
anims/RESET = SubResource( 12 )
anims/special_far = SubResource( 13 )

[node name="Hitbox_melee" type="Area2D" parent="."]
collision_layer = 0
monitoring = false
monitorable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hitbox_melee"]
position = Vector2( -38, 12 )
shape = SubResource( 14 )

[connection signal="body_entered" from="PlayerDetector_close" to="." method="_on_PlayerDetector_body_entered"]
[connection signal="body_exited" from="PlayerDetector_close" to="." method="_on_PlayerDetector_body_exited"]
[connection signal="body_entered" from="PlayerDetector_mid" to="." method="_on_PlayerDetector_mid_body_entered"]
[connection signal="body_exited" from="PlayerDetector_mid" to="." method="_on_PlayerDetector_mid_body_exited"]
[connection signal="body_entered" from="PlayerDetector_far" to="." method="_on_PlayerDetector_far_body_entered"]
[connection signal="body_exited" from="PlayerDetector_far" to="." method="_on_PlayerDetector_far_body_exited"]
[connection signal="body_entered" from="Hitbox_special" to="." method="_on_Hitbox_special_body_entered"]
[connection signal="body_entered" from="Hitbox_special_far" to="." method="_on_Hitbox_special_body_entered"]
[connection signal="body_entered" from="Hitbox_melee" to="." method="_on_Hitbox_body_entered"]
